--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         </div>
         <div class="imagemobile">
-            <img src="img/theeddd.png" alt="">
+            <img src="img/agoravai.jpg" alt="">
             <!-- Esta é a div que você deseja ocultar em telas menores -->
         </div>
         </div>
